css/style.css
html, body {margin:0; padding:0; width:100%; height:100%;}
body{font:normal 12px/1 Arial, Helvetica, "Lucida Sans Unicode", "Lucida Grande", sans-serif; color:#fff; background-color:#050505; overflow:hidden;
background: -webkit-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* Safari 5.1+, Chrome 10+ */ 
background: -moz-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* Firefox 3.6+ */
background: -ms-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* IE 10 */ 
}
img{border:none;margin:0;padding:0;}

canvas#viewcanvas {float:left; width:100%; height:100%; position:absolute;top:0;left:0;z-index:110000;}
canvas#frontcanvas{float:left; width:87%; height:100%; position:absolute;top:0;left:13%;z-index:-2;}

@font-face {
font-family: 'extravaganzzaBold';
src: url('../extravaganzza/extravaganzza-extra-bold-webfont.eot');
src: url('../extravaganzza/extravaganzza-extra-bold-webfont.eot?#iefix') format('embedded-opentype'),
     url('../extravaganzza/extravaganzza-extra-bold-webfont.woff') format('woff'),
     url('../extravaganzza/extravaganzza-extra-bold-webfont.ttf') format('truetype'),
     url('../extravaganzza/extravaganzza-extra-bold-webfont.svg#extravaganzzaBold') format('svg');
font-weight: normal; font-style: normal;
}
@font-face {
font-family: 'extravaganzza';
src: url('../extravaganzza/extravaganzza-webfont.eot');
src: url('../extravaganzza/extravaganzza-webfont.eot?#iefix') format('embedded-opentype'),
     url('../extravaganzza/extravaganzza-webfont.woff') format('woff'),
     url('../extravaganzza/extravaganzza-webfont.ttf') format('truetype'),
     url('../extravaganzza/extravaganzza-webfont.svg#extravaganzzaBold') format('svg');
font-weight: normal; font-style: normal;
}

/* INDEX 1140css framework */
.container {padding-left:20px; padding-right:20px;}
.row {width:100%; max-width:1140px; min-width:920px; margin:0 auto; overflow:hidden;}
.onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol, .sevencol, .eightcol, .ninecol, .tencol, .elevencol {margin-right:3.8%; float:left; min-height:1px;}
.row .onecol {width:4.85%;}
.row .twocol {width:13.45%;}
.row .threecol {width:22.05%;}
.row .fourcol {width:30.75%;}
.row .fivecol {width:39.45%;}
.row .sixcol {width:48%;}
.row .sevencol {width:56.75%;}
.row .eightcol {width:65.4%;}
.row .ninecol {width:74.05%;}
.row .tencol {width:82.7%;}
.row .elevencol {width:91.35%;}
.row .twelvecol {width:100%; float:left;}
.last {margin-right: 0px;}

/* === MAP CONTAINER === */
#mapcontainer {width:100%;height:100%;cursor:move;margin:0 auto;overflow:hidden;position:relative;z-index:100000;display:none;}
#map-1000 {background:url('../images/map-1000.png') no-repeat center center;width:100%;height:100%;}
#map-2000 {width:2000px;height:1007px;}
#map-4000 {width:4000px;height:2014px;}
#map-16000 {width:16000px;height:8056px;}
#map-16000 img {width:16000px;height:8056px;}

/* === MAINBAR === */
#mainbar {background:#000 url('../images/mainbar-bg.png') repeat-x top; width:100%; height:60px; min-width:970px; display:inline; opacity:0.94; border-top:1px solid #000;border-bottom:1px solid #000; position:absolute; bottom:0; left:0; z-index:4000000;}
#mainbar div{position:absolute;}

#mainbar #logo {left:34px; bottom:-3px;}
#mainbar #mainicon    {width:22px; height:22px; bottom:19px; left:12px; background:url('../images/icon-main.gif');}
#mainbar #mainloading {width:22px; height:22px; bottom:19px; left:12px; background:url('../images/icon-main-loading.gif');}

#mainbar em {position:absolute;font-style:normal;text-align:right;color:#fff;}
#mainbar em#magnitude{font-size:48px;right:66px; top:4px;}
#mainbar em#tectonic,em#volcanoes {font-size:14px;right:7px; top:6px; width:28px; padding-left:16px; color:#40a7a4; text-align:left; background:url('../images/mainbar-icon-tect.gif') no-repeat left 3px;}
#mainbar em#volcanoes {background:url('../images/mainbar-icon-volc.png') no-repeat left 4px;}
#mainbar em#tectonic span:last-child,#mainbar em#volcanoes span:last-child {display:none;}
#mainbar em#depth			{font-size:18px;right:27px;top:29px; width:65px; color:#999;}
#mainbar em#depthunit {font-size:12px;right:9px; top:35px; width:20px; color:#666;}
#mainbar em#time			{font-size:21px;right:9px; top:25px;width:80px; color:#f0e079;/* background:url('../images/mainbar-icon-time.gif') no-repeat left 8px;*/}
#mainbar em#date			{font-size:15px;right:9px; top:6px; width:78px; color:#666;}
#mainbar em span#utc  {font-size:10px; padding-right:4px; color:rgba(240,224,121,0.4);}
#mainbar em#region		{font-size:15px;right:9px; top:6px; width:256px;}
#mainbar em#latlon		{font-size:21px;right:9px; top:25px;width:256px;color:#333;}

.i4,.i5,.i6,.i7 {height:5px; left:0; opacity:0.4}
.i4 {top:38px; background:#a3cc29; width:18px;}
.i5 {top:29px; background:#ffe24d; width:18px;}
.i6 {top:20px; background:#cc671f; width:18px;}
.i7 {top:11px; background:#b30000; width:18px;}
.isel {width:26px; opacity:1;}

/* ===== NAVI ==== */
ul#navi {margin:22px 0 0 142px; width:320px; font-family:'extravaganzzaBold'; font-size:16px;}
ul#navi li{display:inline;margin:0 0 0 8px;padding:6px 10px;text-align:center;display:inline;list-style-type:none;text-decoration:none;}
ul#navi li:hover{text-shadow:#ddd 0px 0px 4px; background:rgba(255,255,255,0.1); cursor:pointer;}
ul#navi li.selected {background:rgba(255,255,255,0.1);}
#mainbarinfo {background:rgba(0,68,204,0.1); width:100%; height:auto; padding:14px; position:absolute; bottom:60px; left:0; z-index:3800000; font-size:14px;}

#mag1	{right:387px;top:3px; width:170px;height:54px;background:url('../images/mainbar-bg-big.png') no-repeat top left;}
#mag2	{right:-10px;top:0px; width:170px;height:54px;background:url('../images/mainbar-bg-big.png') no-repeat top right;}
#tec1	{right:569px;top:3px; width:48px; height:26px;background:url('../images/mainbar-bg-small.png') no-repeat top left;}
#tec2	{right:-10px;top:0px; width:48px; height:26px;background:url('../images/mainbar-bg-small.png') no-repeat top right;}
/* ... */

